--- a/styles.css
+++ b/styles.css
@@ -2702,7 +2702,8 @@ button[type="submit"],
 .feature-cell .feature-icon {
     font-size: 1rem;
     margin-right: 6px;
-    vertical-align: baseline;
+    vertical-align: middle;
+    line-height: 1;
 }
 
 .vin-trust-cell {
