--- a/styles.css
+++ b/styles.css
@@ -2856,6 +2856,9 @@ button[type="submit"],
     position: relative;
     overflow: visible;
     box-shadow: none;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .black-panel {
@@ -2864,6 +2867,10 @@ button[type="submit"],
     padding: 30px 25px;
     color: white;
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .panel-header {
